allow dob entry

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		<link rel="icon" href="icon.svg">
 		<title>Family Tree!</title>
 	</head>
