--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 			</div>
 		</div>
 		<!-- content -->
-		<div id="content"></div>
+		<div id="content">
+			<div id="focus">
+				<div></div>
+				<div id="focus-details"></div>
+				<div></div>
+			</div>
+			<div></div>
+			<div></div>
+		</div>
 	</body>
 	<script type="text/javascript" src="scripts.js"></script>
 </html>
