add edit button and age calculator

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		<div id="content">
 			<div id="focus">
 				<div></div>
-				<div id="focus-details"></div>
+				<div id="focus-details">
+					<!-- <button class="edit-button" onclick="editPerson()">Edit</button> -->
+				</div>
 				<div></div>
 			</div>
 			<div></div>
