create menu of people with functional navigation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div id="banner-title">Family Tree</div>
 			<!-- actions -->
 			<div id="banner-menu">
+				<label onclick="renderMenu()">Home</label>
 				<label for="fileInput">Upload</label>
 				<label onClick="downloadFile()">Download</label>
 				<label onClick="newPerson()">New Person</label>
@@ -20,15 +21,6 @@
 		</div>
 		<!-- content -->
 		<div id="content">
-			<div id="focus">
-				<div></div>
-				<div id="focus-details">
-					<!-- <button class="edit-button" onclick="editPerson()">Edit</button> -->
-				</div>
-				<div></div>
-			</div>
-			<div></div>
-			<div></div>
 		</div>
 	</body>
 	<script type="text/javascript" src="scripts.js"></script>
